--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   # data models
+  fluttertoast: ^8.1.2
+  sensors_plus: "^0.0.1"
   freezed_annotation: ^0.14.1
   json_annotation: ^4.0.1
   cupertino_icons: ^1.0.2
@@ -55,6 +57,7 @@ dependencies:
   get: ^4.6.5
   profile: ^0.0.1
   firebase_core: ^2.4.1
+  animated_theme_switcher: ^2.0.7
  
 
 dev_dependencies:
